...
            android:layout_above="@+id/match_play_pause_button"
            android:layout_marginBottom="33dp"
            android:clipToPadding="false"
            android:padding="4dp" />

        <TextView
            android:id="@+id/no_profile_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginEnd="@dimen/margin"
...
